# CSDataQuick

./: .appveyor.yml  .hgignore  .travis.yml  CMakeLists.txt  CSDataQuick.pro  README.rst  adimageprovider.cpp  deployment.pri  epics.pri  epicsqml.pri  epicsqml.pro  main.cpp  package.cmake  paths.pri  pvobject.cpp  pvobject.h  pvobject_plugin.cpp  qml.pri  qml2.pro  qmlmodule.pri  rpath.pri
plugin/: CMakeLists.txt  adimageprovider.cpp  baseitem.cpp  baseitem.h  conversion.c  csdata.cpp  csdata.h  csdatasource.cpp  csdatasource.h  enums.cpp  enums.h  plotitem.cpp  plotitem.h  plugin.cpp  plugin.pro  pvobject.cpp  pvobject.h  qcustomplot.cpp  qcustomplot.h  shapes.cpp  shapes.h  utils.cpp  utils.h
src/ADLParser/: ADLParser.pro  CMakeLists.txt  common.cpp  common.h  element.cpp  element.h  fileinfo.h  parser.cpp  parser.h
src/ADLViewer/: ADLViewer.pro  CMakeLists.txt  ipcserver.cpp  ipcserver.h  main.cpp  main.qml  medm.c  medm.h  medmCommon.c  medmWidget.h  viewer.cpp  viewer.h
src/PvComponents/: BaseWindow.qml  CMakeLists.txt  CaADImage.qml  CaArc.qml  CaBar.qml  CaByte.qml  CaCartesianPlot.qml  CaChoiceButton.qml  CaComposite.qml  CaControl.qml  CaGraphics.qml  CaImage.qml  CaIndicator.qml  CaMenu.qml  CaMessageButton.qml  CaMeter.qml  CaMonitor.qml  CaOval.qml  CaPolygon.qml  CaPolyline.qml  CaRect.qml  CaRelatedDisplay.qml  CaShellCommand.qml  CaSlider.qml  CaStripChart.qml  CaText.qml  CaTextEntry.qml  CaTextUpdate.qml  CaWheelSwitch.qml  ColorMap.qml  DisplayListDialog.qml  DynamicAttr.qml  Frame.qml  Meter.qml  PvComponents.pro  PvInfoDialog.qml  PvLimitsDialog.qml  RDButton.qml  Slider.qml  Slider2.qml  (+42 more)
src/apps/Viewer/: CMakeLists.txt  ipcserver.cpp  main.cpp  main.qml
src/apps/builder/: CMakeLists.txt  main.cpp  main.qml
src/apps/viewer/: CMakeLists.txt  ipcserver.cpp  ipcserver.h  main.cpp  main.qml
src/builder/: CMakeLists.txt  builder.pro  main.cpp  main.qml
src/csdata/ca/: CMakeLists.txt  ca.pro  csdataengineca.cpp  csdataengineca.h
src/csdata/core/: CMakeLists.txt  core.pro  cs_global.h  csdata.cpp  csdata.h  csdataengine.h  csdataenginemanager.cpp  objectmodel.cpp  objectmodel.h
src/csdatacomponents/: BaseWindow.qml  CMakeLists.txt  CS2DSscan.qml  CSADImage.qml  CSArc.qml  CSBar.qml  CSByte.qml  CSCartesianPlot.qml  CSChoiceButton.qml  CSComposite.qml  CSControl.qml  CSGraphics.qml  CSImage.qml  CSIndicator.qml  CSMJPEGVideo.qml  CSMenu.qml  CSMessageButton.qml  CSMeter.qml  CSMonitor.qml  CSOval.qml  CSPolygon.qml  CSPolyline.qml  CSRect.qml  CSRelatedDisplay.qml  CSShellCommand.qml  CSSlider.qml  CSSpinBox.qml  CSStripChart.qml  CSText.qml  CSTextArea.qml  CSTextEntry.qml  CSTextEntryArray.qml  CSTextUpdate.qml  CSWheelSwitch.qml  CaADImage.qml  CaArc.qml  CaBar.qml  CaByte.qml  CaCartesianPlot.qml  CaChoiceButton.qml  (+63 more)
src/csdatacomponents/Private/: ContextMenu.qml  Frame.qml  Indicator.qml  Meter.qml  RDButton.qml  SliderControl.qml  StyledAxis.qml  StyledBar.qml  StyledButton.qml  StyledButton2.qml  StyledTextEntry.qml  WheelDigit.qml  WheelSwitch.qml  qmldir
src/csdatacomponents/designer/: BaseWindowSpecifics.qml  CS2DSscanSpecifics.qml  CSArcSpecifics.qml  CSCartesianPlotSpecifics.qml  CSChoiceButtonSpecifics.qml  CSCompositeSpecifics.qml  CSIndicatorSpecifics.qml  CSMJPEGVideoSpecifics.qml  CSMessageButtonSpecifics.qml  CSPolylineSpecifics.qml  CSRectSpecifics.qml  CSRelatedDisplaySpecifics.qml  CSSliderSpecifics.qml  CSStripChartSpecifics.qml  CSTextAreaSpecifics.qml  CSTextEntryArraySpecifics.qml  CSTextSpecifics.qml  CSTextUpdateSpecifics.qml  CSrtesianPlotEditor.qml  CaBarSpecifics.qml  CaByteSpecifics.qml  CaCartesianPlotSpecifics.qml  CaCompositeSpecifics.qml  CaIndicatorSpecifics.qml  CaMessageButtonSpecifics.qml  CaMeterSpecifics.qml  CaPolygonSpecifics.qml  CaPolylineSpecifics.qml  CaRelatedDisplaySpecifics.qml  CaShellCommandSpecifics.qml  CaSliderSpecifics.qml  CaStripChartSpecifics.qml  CaTextEntrySpecifics.qml  CaTextSpecifics.qml  CaTextUpdateSpecifics.qml  CartesianPlotEditor.qml  ColorPalette.qml  ColorSection.qml  CommandEditor.qml  DataSourceSection.qml  (+9 more)
src/csdatacore/: CMakeLists.txt  csdata.cpp  csdata.h  csdatacore.pro  csdataengine.cpp  csdataengine.h  csdataengineca.cpp  csdataengineca.h  csdataenginemanager.cpp  csdataenginemanager.h  csdataenginesim.cpp  csdataenginesim.h  objectmodel.cpp  objectmodel.h  plugin.cpp  plugins.qmltypes  qmldir  sortfilterproxymodel.cpp  sortfilterproxymodel.h
src/imports/data/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  sortfilterproxymodel.cpp  sortfilterproxymodel.h
src/libs/ADLParser/: ADLParser.cpp  ADLParser.h  ADLParser_global.h  CMakeLists.txt  element.cpp  parser.cpp  parser.h
src/libs/EDLParser/: CMakeLists.txt  EDLParser.cpp  EDLParser.h  EDLParser_global.h  parser.cpp  parser.h
src/libs/UIParser/: CMakeLists.txt  README.rst  UIParser.cpp  UIParser.h  parser.cpp  parser.h  ui4.h
src/libs/csdata/: CMakeLists.txt  csdata.cpp  csdata.h  csdata_global.h  csdataengine.cpp  csdataengine.h  csdataenginemanager.cpp  csdataenginemanager.h  csdataenginesim.cpp  objectmodel.cpp  objectmodel.h
src/libs/parser/: CMakeLists.txt  parser.cpp  parser.h  parser_global.h  parsermanager.cpp  parsermanager.h
src/libs/utils/: CMakeLists.txt  conversion.c  enums.cpp  enums.h  geometryspecification.cpp  utils.cpp  utils.h
src/libs/utils/libCom/: README
src/plugins/EDLParser/: CMakeLists.txt  EDLParser.cpp  edl_parser.cpp
src/plugins/UIParser/: CMakeLists.txt  UIParser.cpp  UIParser_global.h  ui4.h  ui_parser.cpp  ui_parser.h
src/plugins/dataengine/: CMakeLists.txt
src/plugins/dataengine/ca/: CMakeLists.txt  csdataengineca.cpp  csdataengineca.h
src/plugins/dataengine/local/: CMakeLists.txt  csdataenginelocal.cpp  csdataenginelocal.h
src/plugins/dataengine/sim/: CMakeLists.txt  csdataenginesim.h  (+1 more)
src/plugins/local/: CMakeLists.txt  csdataenginelocal.cpp  csdataenginelocal.h
tests/: CMakeLists.txt  adl2qml.py  example.adl  mask.py  plot.adl  test.cpp  test_convert.cpp  test_edlparser.cpp  test_parser.cpp  test_qcsdata.cpp  test_utils.cpp  tests.pro  text.adl  text.qml
(+428 files in other folders)
